--- a/angular.json
+++ b/angular.json
@@ -109,6 +109,9 @@
               
             ]
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
