--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:monobank": "node dist/monobank/server/server.mjs"
+    "serve:ssr:monobank": "node dist/monobank/server/server.mjs",
+    "deploy": "ng deploy --base-href=/pm_21_angular/"
   },
   "private": true,
   "dependencies": {
@@ -35,6 +36,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "angular-cli-ghpages": "^2.0.0-beta.2",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
